--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                         </div>
                         <div class="project-links">
                             <a href="https://taskmanager-demo.dev" target="_blank" class="btn btn-sm">Live Demo</a>
-                            <a href="https://github.com/username/taskmanager" target="_blank" class="btn btn-sm btn-secondary">GitHub</a>
+                            <a href="https://github.com/Maliyu00/Bronx" target="_blank" class="btn btn-sm btn-secondary">GitHub</a>
                         </div>
                     </div>
                 </div>
