--- a/index.html
+++ b/index.html
@@ -203,13 +203,13 @@
                             <span></span>
                         </div>
                         <div class="project-links">
-                            <a href="https://ecommerce-demo.dev" target="_blank" class="btn btn-sm">Live Demo</a>
+                            <a href="" target="_blank" class="btn btn-sm">Live Demo</a>
                             <a href="https://github.com/Maliyu00/Sch" target="_blank" class="btn btn-sm btn-secondary">GitHub</a>
                         </div>
                     </div>
                 </div>
 
-                <!-- Project 2 -->
+                
                 <div class="project-card">
                     <div class="project-image">
                         <img src="assets/image.png" alt="Luggages Site">
@@ -226,13 +226,13 @@
                             <span></span>
                         </div>
                         <div class="project-links">
-                            <a href="https://taskmanager-demo.dev" target="_blank" class="btn btn-sm">Live Demo</a>
+                            <a href="" target="_blank" class="btn btn-sm">Live Demo</a>
                             <a href="https://github.com/Maliyu00/Bronx" target="_blank" class="btn btn-sm btn-secondary">GitHub</a>
                         </div>
                     </div>
                 </div>
 
-                <!-- Project 3 -->
+                
                 <div class="project-card">
                     <div class="project-image">
                         <img src="assets/project3.jpg" alt="">
