--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                             <span></span>
                         </div>
                         <div class="project-links">
-                            <a href="" target="_blank" class="btn btn-sm">Live Demo</a>
+                            <a href="" target="_blank" class="btn btn-sm">-</a>
                             <a href="https://github.com/Maliyu00/Sch" target="_blank" class="btn btn-sm btn-secondary">GitHub</a>
                         </div>
                     </div>
@@ -226,7 +226,7 @@
                             <span></span>
                         </div>
                         <div class="project-links">
-                            <a href="" target="_blank" class="btn btn-sm">Live Demo</a>
+                            <a href="https://bronx-three.vercel.app" target="_blank" class="btn btn-sm">Live</a>
                             <a href="https://github.com/Maliyu00/Bronx" target="_blank" class="btn btn-sm btn-secondary">GitHub</a>
                         </div>
                     </div>
@@ -238,8 +238,8 @@
                         <img src="assets/project3.jpg" alt="">
                     </div>
                     <div class="project-content">
-                        <h3></h3>
-                        <p>.</p>
+                        <h3>-</h3>
+                        <p>-</p>
                         <div class="project-tech">
                             <span></span>
                             <span></span>
@@ -247,8 +247,8 @@
                             <span></span>
                         </div>
                         <div class="project-links">
-                            <a href="" target="_blank" class="btn btn-sm">Live Demo</a>
-                            <a href="" target="_blank" class="btn btn-sm btn-secondary">GitHub</a>
+                            <a href="" target="_blank" class="btn btn-sm">-</a>
+                            <a href="" target="_blank" class="btn btn-sm btn-secondary">-</a>
                         </div>
                     </div>
                 </div>
